manifests/homepage/portal-data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-data
  labels:
    app.kubernetes.io/name: portal-data
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portal-data
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
