manifests/homepage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      nodePort: 30000
      name: http
  selector:
    app.kubernetes.io/name: homepage
